[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Fredoka/Fredoka-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/question.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="question" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="question" type="Label" parent="."]
margin_left = 123.0
margin_top = 89.0
margin_right = 800.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pergunta"

[node name="question_number" type="Label" parent="."]
margin_left = 26.0
margin_top = 27.0
margin_right = 58.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "01"

[node name="copyright" type="Label" parent="."]
margin_left = 625.0
margin_top = 567.0
margin_right = 1012.0
margin_bottom = 587.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Todos os direitos reservados Maur√≠cio Azevedo, 2023"

[node name="first_option" type="Button" parent="."]
margin_left = 110.0
margin_top = 290.0
margin_right = 410.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 3 )
text = "option"

[node name="second_option" type="Button" parent="."]
margin_left = 570.0
margin_top = 420.0
margin_right = 870.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 3 )
text = "option"

[node name="third_option" type="Button" parent="."]
margin_left = 110.0
margin_top = 420.0
margin_right = 410.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 3 )
text = "option"

[node name="fourth_option" type="Button" parent="."]
margin_left = 570.0
margin_top = 290.0
margin_right = 870.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 3 )
text = "option"

[node name="todos_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 628.0
margin_top = 569.0
margin_right = 676.0
margin_bottom = 589.0
text = "todos"

[node name="number_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 21.0
margin_top = 31.0
margin_right = 62.0
margin_bottom = 70.0

[connection signal="pressed" from="first_option" to="." method="_on_first_option_pressed"]
[connection signal="pressed" from="second_option" to="." method="_on_second_option_pressed"]
[connection signal="pressed" from="third_option" to="." method="_on_third_option_pressed"]
[connection signal="pressed" from="fourth_option" to="." method="_on_fourth_option_pressed"]
[connection signal="pressed" from="todos_button" to="." method="_on_todos_button_pressed"]
[connection signal="pressed" from="number_button" to="." method="_on_number_button_pressed"]
